simple-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: pradeep
  name: pradeep
spec:
  replicas: 6
  selector:
    matchLabels:
      app: pradeep
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pradeep
    spec:
      containers:
      - image: httpd
        name: httpd
        resources: 
          limits:
            cpu: 500m
            memory: 500Mi
status: {}
